--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,5 @@
 redditclone.welcome-msg=Hello, dev Redditclone
+logging.level.root=INFO
+logging.level.biz.lci=TRACE
+management.endpoint.health.show-details=always
+management.endpoints.jmx.exposure.include=*
