--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 redditclone.welcome-msg=Hello, Redditclone
+info.application.name=Redditclone
+info.application.description=A Spring Boot 2 reddit clone example.
+info.application.version=0.0.1
