added h2 and jpa properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ redditclone.welcome-msg=Hello, Redditclone
 info.application.name=Redditclone
 info.application.description=A Spring Boot 2 reddit clone example.
 info.application.version=0.0.1
+
+#jpa
+spring.datasource.name=redditclone
