--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,14 @@
 redditclone.welcome-msg=Hello, dev Redditclone
 logging.level.root=INFO
 logging.level.biz.lci=TRACE
+
 management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
 management.endpoints.jmx.exposure.include=*
+
+#h2/jpa
+spring.h2.console.enabled=true
+spring.datasource.name=redditclone
+spring.jpa.show-sql=true
+#spring.datasource.username=sa
+#spring.datasource.password=1234
