updated h2 and jpa properties removed dev properties for now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,16 @@ info.application.name=Redditclone
 info.application.description=A Spring Boot 2 reddit clone example.
 info.application.version=0.0.1
 
-#jpa
+logging.level.root=INFO
+logging.level.biz.lci=TRACE
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
+
+#h2/jpa
+spring.h2.console.enabled=true
 spring.datasource.name=redditclone
+spring.jpa.show-sql=true
+#spring.datasource.username=sa
+#spring.datasource.password=1234
