created user and role entities and their basic repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.name=redditclone
 spring.jpa.show-sql=true
 #spring.datasource.username=sa
 #spring.datasource.password=1234
+
+#security settings
+spring.security.user.roles=ADMIN
