secured actuator endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ info.application.version=0.0.1
 logging.level.root=INFO
 logging.level.biz.lci=TRACE
 
-management.endpoint.health.show-details=always
+management.endpoint.health.show-details=when_authorized
 management.endpoints.web.exposure.include=*
 management.endpoints.jmx.exposure.include=*
 
