added welcome and activation emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.show-sql=true
 
 #security settings
 spring.security.user.roles=ADMIN
+
+#mail settings
+spring.mail.host=localhost
+spring.mail.port=1025
