--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,11 @@
 redditclone.welcome-msg=Hello, Redditclone
 info.application.name=Redditclone
 info.application.description=A Spring Boot 2 reddit clone example.
-info.application.version=0.0.1
-
-logging.level.root=INFO
-logging.level.biz.lci=TRACE
+info.application.version=0.0.2
 
 management.endpoint.health.show-details=when_authorized
 management.endpoints.web.exposure.include=*
-management.endpoints.jmx.exposure.include=*
-
-#h2/jpa
-spring.h2.console.enabled=true
-spring.datasource.name=redditclone
-spring.jpa.show-sql=true
-#spring.datasource.username=sa
-#spring.datasource.password=1234
+#management.endpoints.jmx.exposure.include=*
 
 #security settings
 spring.security.user.roles=ADMIN
-
-#mail settings
-spring.mail.host=localhost
-spring.mail.port=1025
