added messages using app properties in emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ management.endpoints.web.exposure.include=*
 
 #security settings
 spring.security.user.roles=ADMIN
+
+redditclone.email.replyto=noreply@lcidev.com
+aMessage=app message
