put base url in app properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,5 @@ spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=25
 #spring.mail.username=
 #spring.mail.password=
+
+redditclone.base-url=http://redditclone.lcidev.com
