added message service to message i18n replaced text with message references in emails and some views

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,4 +11,6 @@ spring.jpa.show-sql=true
 spring.mail.host=localhost
 spring.mail.port=1025
 
+spring.thymeleaf.cache=false
+
 redditclone.base-url=http://localhost:8080
